<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:id="@+id/selectedContainer"
    android:contextClickable="true"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_shimmer_image_height"
        android:id="@+id/ivShimmer"
        android:src="@drawable/ic_shimmer"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"/>

    <TextView android:id="@+id/tvDeviceName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="?attr/textAppearanceListItem"
              android:textStyle="bold"
              android:textSize="19sp"
              android:layout_marginTop="@dimen/default_margin"
              android:layout_marginLeft="@dimen/default_margin"
              android:layout_marginRight="@dimen/default_margin"
              android:text="DeviceName"
              android:textAlignment="center"/>

    <TextView android:id="@+id/tvDeviceAddress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:layout_marginBottom="@dimen/default_margin"
              android:layout_marginRight="@dimen/default_margin"
              android:layout_marginLeft="@dimen/default_margin"
              android:text="DeviceAddress"
              android:textAlignment="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="@dimen/fragment_shimmer_button_width"
            android:layout_height="wrap_content"
            android:text="@string/pair_select_sensor_text"
            android:id="@+id/btnSelectSensor"
            android:enabled="true"/>

        <Button
            android:layout_width="@dimen/fragment_shimmer_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shimmer_connect"
            android:id="@+id/btnConnectDisconnect"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:visibility="invisible"
        android:id="@+id/llStateContainer">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ivSensorState"
            android:src="@drawable/circle_red"
            android:contentDescription="@string/image_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SensorState"
            android:id="@+id/tvSensorState"
            android:layout_gravity="top"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>